# jquants-cli-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
src/jquants_cli_mcp/: server.py
