[project]
name = "jquants-cli-mcp"
version = "0.3.2"
description = "MCP server that runs the local jquants CLI and serves its version-matched skill"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
]

[project.scripts]
jquants-cli-mcp = "jquants_cli_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jquants_cli_mcp"]
